--- a/src/main/resources/assets/modminecraft/lang/es_es.json
+++ b/src/main/resources/assets/modminecraft/lang/es_es.json
@@ -12,6 +12,8 @@
   "block.modminecraft.deepslate_argento_ore": "Mena de Argento Profunda",
   "block.modminecraft.banjo_music_block": "Bloque de Instrumentos de Cuerda",
 
+  "block.modminecraft.oxiwood_planks": "Tablones de Oximadera",
+
   "item.modminecraft.sandwich": "Bocadillo de Chuleta de Cerdo",
   "item.modminecraft.strawberry": "Fresa",
 
