--- a/src/main/resources/assets/modminecraft/lang/es_es.json
+++ b/src/main/resources/assets/modminecraft/lang/es_es.json
@@ -5,6 +5,7 @@
   "item.modminecraft.florita_ingot": "Lingote de Florita",
 
   "item.modminecraft.mineral_seeker": "Buscador de Minerales",
+  "item.modminecraft.urimita_wand": "Varita de Urimita",
 
   "block.modminecraft.argento_ore": "Mena de Argento",
   "block.modminecraft.calento_ore": "Mena de Calento",
